--- a/index.html
+++ b/index.html
@@ -12,8 +12,35 @@
         <input id="nome" type="text" size="30" maxlength="5" placeholder="seunome">
         <label for="sobrenome">Sobrenome: </label>
         <input id="sobrenome"type="text" size="30" maxlength="30"><br>
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha">
+        <label for="senha">Senha:</label size="10" maxlength="8">
+        <input type="password" id="senha"><br>
+        <label for="email">E-mail:</label>
+        <input type="email" id="email"><br><br>
+        <label for="sexo">Sexo:</label><br>
+        <input value="Feminino" name="genero" type="radio" id="sexo">
+        <label for="feminino">Feminino</label><br>
+        <input type="radio" id="masculino" name="genero" value="masculino">
+        <label for="masculino">Masculino</label><br> <br>
+        <label>Cursos Matriculados:</label>
+        <input type="checkbox" id="java" name="cursos" value="Java">
+        <label for="java">Java</label><br><br>
+        <input type="checkbox" id="python" name="cursos" value="Python">
+        <label for="python">Python</label><br><br>
+        <input type="checkbox" id="c" name="cursos" value="C">
+        <label for="c">C</label><br><br><br>
+        <label for="">Anexe seu compravante de matrícula:</label>
+        <input type="file" name="" id="" multiple> <br><br>
+        <label for="">Data do envio:</label>
+        <input type="date" min="2024-09-09" max="2024-09-16"><br><br>
+        <label for="">Telefone</label>
+        <input type="tel" pattern="[0-9]{2} - [0-9]{5} - [0-9]{4}" placeholder="99-99999-9999"><br><br>
+        <label for="">Selecione o mês que deseja começar</label>
+        <input type="month"><br><br>
+        <label for="">Dúvidas:</label>
+        <textarea name="" id="" cols="40-" rows="10"></textarea><br><br>
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Cancelar">
+            
     </form>
 </body>
 </html>
