--- a/index.html
+++ b/index.html
@@ -2,45 +2,43 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
 </head>
 <body>
     <form action="">
         <h1>Dados Pessoais</h1>
-        <label for="nome">Nome: </label>
-        <input id="nome" type="text" size="30" maxlength="5" placeholder="seunome">
+        <label for="nome">Nome:</label>
+        <input required id="nome" type="text" size="30" maxlength="30" placeholder="informe seu nome">
         <label for="sobrenome">Sobrenome: </label>
-        <input id="sobrenome"type="text" size="30" maxlength="30"><br>
-        <label for="senha">Senha:</label size="10" maxlength="8">
-        <input type="password" id="senha"><br>
-        <label for="email">E-mail:</label>
-        <input type="email" id="email"><br><br>
-        <label for="sexo">Sexo:</label><br>
-        <input value="Feminino" name="genero" type="radio" id="sexo">
+        <input required id="sobrenome" type="text" size="30" maxlength="30" placeholder="informe seu sobrenome"> <br> <br>
+        <label for="senha">Senha: </label>
+        <input id="senha" type="password" size="10" maxlength="8" placeholder="Informe a senha"> <br> <br>
+        <label for="email">Email: </label>
+        <input id="email" type="email" placeholder="informe o email"> <br><br>
+        <label>Sexo: </label><br>
+        <input id="feminino" name="genero" value="Feminino" type="radio"> <!-- comentário-->
         <label for="feminino">Feminino</label><br>
-        <input type="radio" id="masculino" name="genero" value="masculino">
+        <input type="radio" id="masculino" name="genero" value="Masculino">
         <label for="masculino">Masculino</label><br> <br>
-        <label>Cursos Matriculados:</label>
+        <label>Cursos matriculados: </label><br>
         <input type="checkbox" id="java" name="cursos" value="Java">
-        <label for="java">Java</label><br><br>
+        <label for="java">Java</label><br>
         <input type="checkbox" id="python" name="cursos" value="Python">
-        <label for="python">Python</label><br><br>
+        <label for="python">Python</label><br>
         <input type="checkbox" id="c" name="cursos" value="C">
-        <label for="c">C</label><br><br><br>
-        <label for="">Anexe seu compravante de matrícula:</label>
-        <input type="file" name="" id="" multiple> <br><br>
-        <label for="">Data do envio:</label>
+        <label for="c">C</label><br><br>
+        <label> Anexe seu comprovante de matrícula:</label>
+        <input type="file" multiple><br><br>
+        <label>Data do envio: </label>
         <input type="date" min="2024-09-09" max="2024-09-16"><br><br>
         <label for="">Telefone</label>
-        <input type="tel" pattern="[0-9]{2} - [0-9]{5} - [0-9]{4}" placeholder="99-99999-9999"><br><br>
-        <label for="">Selecione o mês que deseja começar</label>
-        <input type="month"><br><br>
-        <label for="">Dúvidas:</label>
-        <textarea name="" id="" cols="40-" rows="10"></textarea><br><br>
-        <input type="submit" value="Enviar">
+        <input type="tel" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" placeholder="99-99999-9999"><br>
+        <label> Selecione o mês que deseja iniciar: </label>
+        <input type="month"><br>
+        <label>Dúvidas:</label><br>
+        <textarea rows="15" cols="30"></textarea><br><br>
+        <input type="submit" value="Confirmar">
         <input type="reset" value="Cancelar">
-            
     </form>
 </body>
 </html>
